--- a/src/main/resources/assets/silverwolfscoloredredstone/lang/en_us.json
+++ b/src/main/resources/assets/silverwolfscoloredredstone/lang/en_us.json
@@ -1,22 +1,6 @@
 {
   "itemGroup.creativetab": "SCR",
 
-  "item.silverwolfscoloredredstone.black_redstone": "Black Redstone",
-  "item.silverwolfscoloredredstone.blue_redstone": "Blue Redstone",
-  "item.silverwolfscoloredredstone.brown_redstone": "Brown Redstone",
-  "item.silverwolfscoloredredstone.cyan_redstone": "Cyan Redstone",
-  "item.silverwolfscoloredredstone.gray_redstone": "Gray Redstone",
-  "item.silverwolfscoloredredstone.green_redstone": "Green Redstone",
-  "item.silverwolfscoloredredstone.light_blue_redstone": "Light Blue Redstone",
-  "item.silverwolfscoloredredstone.light_gray_redstone": "Light Gray Redstone",
-  "item.silverwolfscoloredredstone.lime_redstone": "Lime Redstone",
-  "item.silverwolfscoloredredstone.magenta_redstone": "Magenta Redstone",
-  "item.silverwolfscoloredredstone.orange_redstone": "Orange Redstone",
-  "item.silverwolfscoloredredstone.pink_redstone": "Pink Redstone",
-  "item.silverwolfscoloredredstone.purple_redstone": "Purple Redstone",
-  "item.silverwolfscoloredredstone.white_redstone": "White Redstone",
-  "item.silverwolfscoloredredstone.yellow_redstone": "Yellow Redstone",
-
   "block.silverwolfscoloredredstone.black_activator_rail": "Black Activator Rail",
   "block.silverwolfscoloredredstone.blue_activator_rail": "Blue Activator Rail",
   "block.silverwolfscoloredredstone.brown_activator_rail": "Brown Activator Rail",
@@ -31,5 +15,110 @@
   "block.silverwolfscoloredredstone.pink_activator_rail": "Pink Activator Rail",
   "block.silverwolfscoloredredstone.purple_activator_rail": "Purple Activator Rail",
   "block.silverwolfscoloredredstone.white_activator_rail": "White Activator Rail",
-  "block.silverwolfscoloredredstone.yellow_activator_rail": "Yellow Activator Rail"
+  "block.silverwolfscoloredredstone.yellow_activator_rail": "Yellow Activator Rail",
+  "block.silverwolfscoloredredstone.black_detector_rail": "Black Detector Rail",
+  "block.silverwolfscoloredredstone.blue_detector_rail": "Blue Detector Rail",
+  "block.silverwolfscoloredredstone.brown_detector_rail": "Brown Detector Rail",
+  "block.silverwolfscoloredredstone.cyan_detector_rail": "Cyan Detector Rail",
+  "block.silverwolfscoloredredstone.gray_detector_rail": "Gray Detector Rail",
+  "block.silverwolfscoloredredstone.green_detector_rail": "Green Detector Rail",
+  "block.silverwolfscoloredredstone.light_blue_detector_rail": "Light Blue Detector Rail",
+  "block.silverwolfscoloredredstone.light_gray_detector_rail": "Light Gray Detector Rail",
+  "block.silverwolfscoloredredstone.lime_detector_rail": "Lime Detector Rail",
+  "block.silverwolfscoloredredstone.magenta_detector_rail": "Magenta Detector Rail",
+  "block.silverwolfscoloredredstone.orange_detector_rail": "Orange Detector Rail",
+  "block.silverwolfscoloredredstone.pink_detector_rail": "Pink Detector Rail",
+  "block.silverwolfscoloredredstone.purple_detector_rail": "Purple Detector Rail",
+  "block.silverwolfscoloredredstone.white_detector_rail": "White Detector Rail",
+  "block.silverwolfscoloredredstone.yellow_detector_rail": "Yellow Detector Rail",
+  "block.silverwolfscoloredredstone.black_powered_rail": "Black Powered Rail",
+  "block.silverwolfscoloredredstone.blue_powered_rail": "Blue Powered Rail",
+  "block.silverwolfscoloredredstone.brown_powered_rail": "Brown Powered Rail",
+  "block.silverwolfscoloredredstone.cyan_powered_rail": "Cyan Powered Rail",
+  "block.silverwolfscoloredredstone.gray_powered_rail": "Gray Powered Rail",
+  "block.silverwolfscoloredredstone.green_powered_rail": "Green Powered Rail",
+  "block.silverwolfscoloredredstone.light_blue_powered_rail": "Light Blue Powered Rail",
+  "block.silverwolfscoloredredstone.light_gray_powered_rail": "Light Gray Powered Rail",
+  "block.silverwolfscoloredredstone.lime_powered_rail": "Lime Powered Rail",
+  "block.silverwolfscoloredredstone.magenta_powered_rail": "Magenta Powered Rail",
+  "block.silverwolfscoloredredstone.orange_powered_rail": "Orange Powered Rail",
+  "block.silverwolfscoloredredstone.pink_powered_rail": "Pink Powered Rail",
+  "block.silverwolfscoloredredstone.purple_powered_rail": "Purple Powered Rail",
+  "block.silverwolfscoloredredstone.white_powered_rail": "White Powered Rail",
+  "block.silverwolfscoloredredstone.yellow_powered_rail": "Yellow Powered Rail",
+  "block.silverwolfscoloredredstone.black_redstone_block": "Black Redstone Block",
+  "block.silverwolfscoloredredstone.blue_redstone_block": "Blue Redstone Block",
+  "block.silverwolfscoloredredstone.brown_redstone_block": "Brown Redstone Block",
+  "block.silverwolfscoloredredstone.cyan_redstone_block": "Cyan Redstone Block",
+  "block.silverwolfscoloredredstone.gray_redstone_block": "Gray Redstone Block",
+  "block.silverwolfscoloredredstone.green_redstone_block": "Green Redstone Block",
+  "block.silverwolfscoloredredstone.light_blue_redstone_block": "Light Blue Redstone Block",
+  "block.silverwolfscoloredredstone.light_gray_redstone_block": "Light Gray Redstone Block",
+  "block.silverwolfscoloredredstone.lime_redstone_block": "Lime Redstone Block",
+  "block.silverwolfscoloredredstone.magenta_redstone_block": "Magenta Redstone Block",
+  "block.silverwolfscoloredredstone.orange_redstone_block": "Orange Redstone Block",
+  "block.silverwolfscoloredredstone.pink_redstone_block": "Pink Redstone Block",
+  "block.silverwolfscoloredredstone.purple_redstone_block": "Purple Redstone Block",
+  "block.silverwolfscoloredredstone.white_redstone_block": "White Redstone Block",
+  "block.silverwolfscoloredredstone.yellow_redstone_block": "Yellow Redstone Block",
+  "block.silverwolfscoloredredstone.black_redstone_torch": "Black Redstone Torch",
+  "block.silverwolfscoloredredstone.blue_redstone_torch": "Blue Redstone Torch",
+  "block.silverwolfscoloredredstone.brown_redstone_torch": "Brown Redstone Torch",
+  "block.silverwolfscoloredredstone.cyan_redstone_torch": "Cyan Redstone Torch",
+  "block.silverwolfscoloredredstone.gray_redstone_torch": "Gray Redstone Torch",
+  "block.silverwolfscoloredredstone.green_redstone_torch": "Green Redstone Torch",
+  "block.silverwolfscoloredredstone.light_blue_redstone_torch": "Light Blue Redstone Torch",
+  "block.silverwolfscoloredredstone.light_gray_redstone_torch": "Light Gray Redstone Torch",
+  "block.silverwolfscoloredredstone.lime_redstone_torch": "Lime Redstone Torch",
+  "block.silverwolfscoloredredstone.magenta_redstone_torch": "Magenta Redstone Torch",
+  "block.silverwolfscoloredredstone.orange_redstone_torch": "Orange Redstone Torch",
+  "block.silverwolfscoloredredstone.pink_redstone_torch": "Pink Redstone Torch",
+  "block.silverwolfscoloredredstone.purple_redstone_torch": "Purple Redstone Torch",
+  "block.silverwolfscoloredredstone.white_redstone_torch": "White Redstone Torch",
+  "block.silverwolfscoloredredstone.yellow_redstone_torch": "Yellow Redstone Torch",
+  "block.silverwolfscoloredredstone.black_comparator": "Black Comparator",
+  "block.silverwolfscoloredredstone.blue_comparator": "Blue Comparator",
+  "block.silverwolfscoloredredstone.brown_comparator": "Brown Comparator",
+  "block.silverwolfscoloredredstone.cyan_comparator": "Cyan Comparator",
+  "block.silverwolfscoloredredstone.gray_comparator": "Gray Comparator",
+  "block.silverwolfscoloredredstone.green_comparator": "Green Comparator",
+  "block.silverwolfscoloredredstone.light_blue_comparator": "Light Blue Comparator",
+  "block.silverwolfscoloredredstone.light_gray_comparator": "Light Gray Comparator",
+  "block.silverwolfscoloredredstone.lime_comparator": "Lime Comparator",
+  "block.silverwolfscoloredredstone.magenta_comparator": "Magenta Comparator",
+  "block.silverwolfscoloredredstone.orange_comparator": "Orange Comparator",
+  "block.silverwolfscoloredredstone.pink_comparator": "Pink Comparator",
+  "block.silverwolfscoloredredstone.purple_comparator": "Purple Comparator",
+  "block.silverwolfscoloredredstone.white_comparator": "White Comparator",
+  "block.silverwolfscoloredredstone.yellow_comparator": "Yellow Comparator",
+  "block.silverwolfscoloredredstone.black_repeater": "Black Repeater",
+  "block.silverwolfscoloredredstone.blue_repeater": "Blue Repeater",
+  "block.silverwolfscoloredredstone.brown_repeater": "Brown Repeater",
+  "block.silverwolfscoloredredstone.cyan_repeater": "Cyan Repeater",
+  "block.silverwolfscoloredredstone.gray_repeater": "Gray Repeater",
+  "block.silverwolfscoloredredstone.green_repeater": "Green Repeater",
+  "block.silverwolfscoloredredstone.light_blue_repeater": "Light Blue Repeater",
+  "block.silverwolfscoloredredstone.light_gray_repeater": "Light Gray Repeater",
+  "block.silverwolfscoloredredstone.lime_repeater": "Lime Repeater",
+  "block.silverwolfscoloredredstone.magenta_repeater": "Magenta Repeater",
+  "block.silverwolfscoloredredstone.orange_repeater": "Orange Repeater",
+  "block.silverwolfscoloredredstone.pink_repeater": "Pink Repeater",
+  "block.silverwolfscoloredredstone.purple_repeater": "Purple Repeater",
+  "block.silverwolfscoloredredstone.white_repeater": "White Repeater",
+  "block.silverwolfscoloredredstone.yellow_repeater": "Yellow Repeater",
+  "block.silverwolfscoloredredstone.black_redstone_wire": "Black Redstone",
+  "block.silverwolfscoloredredstone.blue_redstone_wire": "Blue Redstone",
+  "block.silverwolfscoloredredstone.brown_redstone_wire": "Brown Redstone",
+  "block.silverwolfscoloredredstone.cyan_redstone_wire": "Cyan Redstone",
+  "block.silverwolfscoloredredstone.gray_redstone_wire": "Gray Redstone",
+  "block.silverwolfscoloredredstone.green_redstone_wire": "Green Redstone",
+  "block.silverwolfscoloredredstone.light_blue_redstone_wire": "Light Blue Redstone",
+  "block.silverwolfscoloredredstone.light_gray_redstone_wire": "Light Gray Redstone",
+  "block.silverwolfscoloredredstone.lime_redstone_wire": "Lime Redstone",
+  "block.silverwolfscoloredredstone.magenta_redstone_wire": "Magenta Redstone",
+  "block.silverwolfscoloredredstone.orange_redstone_wire": "Orange Redstone",
+  "block.silverwolfscoloredredstone.pink_redstone_wire": "Pink Redstone",
+  "block.silverwolfscoloredredstone.purple_redstone_wire": "Purple Redstone",
+  "block.silverwolfscoloredredstone.white_redstone_wire": "White Redstone",
+  "block.silverwolfscoloredredstone.yellow_redstone_wire": "Yellow Redstone"
 }
