--- a/src/main/resources/assets/silverwolfscoloredredstone/lang/en_us.json
+++ b/src/main/resources/assets/silverwolfscoloredredstone/lang/en_us.json
@@ -106,19 +106,20 @@
   "block.silverwolfscoloredredstone.purple_repeater": "Purple Repeater",
   "block.silverwolfscoloredredstone.white_repeater": "White Repeater",
   "block.silverwolfscoloredredstone.yellow_repeater": "Yellow Repeater",
-  "block.silverwolfscoloredredstone.black_redstone_wire": "Black Redstone",
-  "block.silverwolfscoloredredstone.blue_redstone_wire": "Blue Redstone",
-  "block.silverwolfscoloredredstone.brown_redstone_wire": "Brown Redstone",
-  "block.silverwolfscoloredredstone.cyan_redstone_wire": "Cyan Redstone",
-  "block.silverwolfscoloredredstone.gray_redstone_wire": "Gray Redstone",
-  "block.silverwolfscoloredredstone.green_redstone_wire": "Green Redstone",
-  "block.silverwolfscoloredredstone.light_blue_redstone_wire": "Light Blue Redstone",
-  "block.silverwolfscoloredredstone.light_gray_redstone_wire": "Light Gray Redstone",
-  "block.silverwolfscoloredredstone.lime_redstone_wire": "Lime Redstone",
-  "block.silverwolfscoloredredstone.magenta_redstone_wire": "Magenta Redstone",
-  "block.silverwolfscoloredredstone.orange_redstone_wire": "Orange Redstone",
-  "block.silverwolfscoloredredstone.pink_redstone_wire": "Pink Redstone",
-  "block.silverwolfscoloredredstone.purple_redstone_wire": "Purple Redstone",
-  "block.silverwolfscoloredredstone.white_redstone_wire": "White Redstone",
-  "block.silverwolfscoloredredstone.yellow_redstone_wire": "Yellow Redstone"
+
+  "item.silverwolfscoloredredstone.black_redstone_wire": "Black Redstone",
+  "item.silverwolfscoloredredstone.blue_redstone_wire": "Blue Redstone",
+  "item.silverwolfscoloredredstone.brown_redstone_wire": "Brown Redstone",
+  "item.silverwolfscoloredredstone.cyan_redstone_wire": "Cyan Redstone",
+  "item.silverwolfscoloredredstone.gray_redstone_wire": "Gray Redstone",
+  "item.silverwolfscoloredredstone.green_redstone_wire": "Green Redstone",
+  "item.silverwolfscoloredredstone.light_blue_redstone_wire": "Light Blue Redstone",
+  "item.silverwolfscoloredredstone.light_gray_redstone_wire": "Light Gray Redstone",
+  "item.silverwolfscoloredredstone.lime_redstone_wire": "Lime Redstone",
+  "item.silverwolfscoloredredstone.magenta_redstone_wire": "Magenta Redstone",
+  "item.silverwolfscoloredredstone.orange_redstone_wire": "Orange Redstone",
+  "item.silverwolfscoloredredstone.pink_redstone_wire": "Pink Redstone",
+  "item.silverwolfscoloredredstone.purple_redstone_wire": "Purple Redstone",
+  "item.silverwolfscoloredredstone.white_redstone_wire": "White Redstone",
+  "item.silverwolfscoloredredstone.yellow_redstone_wire": "Yellow Redstone"
 }
